# lxp-recomm-engine-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml
app/: config.py  main.py
app/api/: router.py
app/api/endpoints/: engine.py  health.py  test_engine.py
app/core/: adjuster.py  filter.py  interfaces.py  pipeline.py  scorer.py
app/exceptions/: handlers.py
app/infra/: callback.py  loader.py  storage.py
app/schemas/: request.py  response.py
app/services/: process_service.py
scripts/: generate_large_mock.py  generate_mock.py  upload_to_r2.py
test_data/: csv_result.json  docker_result.json  result.json
tests/: conftest.py  test_adjuster.py  test_filter.py  test_integration.py  test_pipeline.py  test_scorer.py
