[project]
name = "lxp-recflow"
version = "0.1.0"
description = "FastAPI Recommendation Engine for LXP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.0",
    "boto3>=1.35.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "scipy>=1.14.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "moto[s3]>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"